Fix #32: Fix responsive spacing around billboard

--- a/rbx/static/css/bootstrap-responsive.css
+++ b/rbx/static/css/bootstrap-responsive.css
@@ -787,10 +787,6 @@
 }
 
 @media (max-width: 767px) {
-  body {
-    padding-right: 20px;
-    padding-left: 20px;
-  }
   .navbar-fixed-top,
   .navbar-fixed-bottom,
   .navbar-static-top {
@@ -811,6 +807,8 @@
   }
   .container {
     width: auto;
+    padding-right: 20px;
+    padding-left: 20px;
   }
   .row-fluid {
     width: 100%;
